--- a/index.html
+++ b/index.html
@@ -285,15 +285,25 @@
 
 
         <!-------------- second-section end --------------------->
-        <!------------------ footer start --------------------->
-        <footer>
 
-        </footer>
-
-
-        <!------------------ footer end --------------------->
 
     </main>
+
+    <!-- footer -->
+
+    <footer class="footer">
+        <h2>Influencer Products</h2>
+        <div class="footer-details">
+            <p>Copyright &copy; Author is Shahin Mahmud</p>
+            <p>All rights reserved </p>
+            <div class="social-icon">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
