--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
         <!-- first-section start -->
 
         <section class="section-container container">
+
             <div class="section-details">
                 <h1 class="section-title-h1">Start your journey as <br> influencer</h1>
-                <p class="section-info">An influencer is a person who is regarded as an expert within their particular
+                <p class="section-info">An influencer is a person who is regarded as an expert within their
+                    particular
                     <br>
                     field that also has a steady following.
                 </p>
@@ -49,8 +51,9 @@
             </div>
             <div class="section-img">
                 <img src="images/main-camera.png" alt="">
+
             </div>
-            <br>
+
 
 
         </section>
@@ -87,12 +90,12 @@
                 </div>
                 <div class="product">
                     <div class="product-banner">
-                        <img src="images/tripod.png" alt="">
+                        <img src="images/action.png" alt="">
                     </div>
                     <div class="product-details">
                         <div class="product-price">
-                            <h3>FlexTripod</h3>
-                            <h4>$50.48</h4>
+                            <h3>action</h3>
+                            <h4>$68.48</h4>
                         </div>
                         <div class="product-info">
                             <div class="rating">
@@ -211,7 +214,7 @@
                     </div>
                     <div class="product-details">
                         <div class="product-price">
-                            <h3>FlexTripod</h3>
+                            <h3>Gear</h3>
                             <h4>$50.48</h4>
                         </div>
                         <div class="product-info">
@@ -231,12 +234,12 @@
                 </div>
                 <div class="product">
                     <div class="product-banner">
-                        <img src="images/tripod.png" alt="">
+                        <img src="images/airpod.png" alt="">
                     </div>
                     <div class="product-details">
                         <div class="product-price">
-                            <h3>FlexTripod</h3>
-                            <h4>$50.48</h4>
+                            <h3>airpod</h3>
+                            <h4>$350.48</h4>
                         </div>
                         <div class="product-info">
                             <div class="rating">
@@ -255,12 +258,12 @@
                 </div>
                 <div class="product">
                     <div class="product-banner">
-                        <img src="images/tripod.png" alt="">
+                        <img src="images/camera.png" alt="">
                     </div>
                     <div class="product-details">
                         <div class="product-price">
-                            <h3>FlexTripod</h3>
-                            <h4>$50.48</h4>
+                            <h3>camera</h3>
+                            <h4>$500.48</h4>
                         </div>
                         <div class="product-info">
                             <div class="rating">
@@ -281,17 +284,19 @@
             </div>
 
         </section>
-
-
-
         <!-------------- second-section end --------------------->
+
+
+
+
 
 
     </main>
 
-    <!-- footer -->
+    <!-- footer start -->
 
     <footer class="footer">
+
         <h2>Influencer Products</h2>
         <div class="footer-details">
             <p>Copyright &copy; Author is Shahin Mahmud</p>
@@ -303,8 +308,9 @@
                 <i class="fab fa-instagram"></i>
             </div>
         </div>
-    </footer>
 
+    </footer>
+    <!-- footer end -->
 
 </body>
 
